# lens-laws

./: CHANGELOG.md  README.md  lens-laws.cabal  stack-7.10.yaml  stack-7.8.yaml
src/Control/Lens/Iso/: Laws.hs
src/Control/Lens/Lens/: Laws.hs
src/Control/Lens/Prism/: Laws.hs
src/Control/Lens/Setter/: Laws.hs
src/Control/Lens/Traversal/: Laws.hs
